<resources>
    <string name="app_name">PartiUVV</string>

    <!-- Labels -->
    <string name="lbl_enter">Entrar</string>
    <string name="lbl_entering">Entrando...</string>
    <string name="lbl_profile">Perfil</string>
    <string name="lbl_ride">Carona</string>
    <string name="lbl_edit_profile">Editar Perfil</string>
    <string name="lbl_edit_places">Editar Locais</string>
    <string name="lbl_request_ride">Solicitar Carona</string>
    <string name="lbl_offer_ride">Oferecer Carona</string>
    <string name="lbl_see_requests_received">Pedidos Recebidos</string>
    <string name="lbl_see_requests_made">Pedidos Realizados</string>
    <string name="lbl_offered_rides">Caronas Ofertadas</string>
    <string name="lbl_logout">Sair</string>
    <string name="lbl_map">Mapa</string>
    <string name="lbl_ride_detail">Detalhes</string>
    <string name="lbl_person">Pessoa</string>
    <string name="lbl_cars">Carros</string>
    <string name="lbl_places">Locais</string>
    <string name="lbl_change_photo">Alterar foto</string>
    <string name="lbl_add_location">Adicionar Localização</string>
    <string name="lbl_select_location">Selecionar Localização</string>
    <string name="lbl_remove_car">Remover Carro</string>
    <string name="lbl_save_changes">Salvar Alterações</string>
    <string name="lbl_forgot_password">Esqueceu a Senha?</string>
    <string name="lbl_signup_now">Cadastre-se</string>
    <string name="lbl_signup">Cadastrar</string>
    <string name="lbl_register">Cadastro</string>
    <string name="lbl_signing_up">Cadastrando...</string>
    <string name="lbl_home">Principal</string>
    <string name="lbl_house">Casa</string>
    <string name="lbl_work_place">Trabalho</string>
    <string name="lbl_destination">Destino</string>
    <string name="lbl_num_passagers">Número de passageiros</string>
    <string name="lbl_departure">Origem</string>
    <string name="lbl_other_points">Outros Pontos</string>
    <string name="lbl_date">Data</string>
    <string name="lbl_date_colon">Data:</string>
    <string name="lbl_hour">Hora</string>
    <string name="lbl_hour_colon">Hora:</string>
    <string name="lbl_confirm_ride">Confirmação de Carona</string>
    <string name="lbl_route">Rota</string>
    <string name="lbl_personal_info">Dados Pessoais</string>
    <string name="lbl_address">Endereço</string>
    <string name="lbl_description">Descrição</string>
    <string name="lbl_driver">Motorista</string>
    <string name="lbl_time_takeoff">Saída:</string>
    <string name="lbl_phone">Tel.:</string>
    <string name="lbl_passagers">Passageiros</string>
    <string name="lbl_passager">Passageiro</string>
    <string name="lbl_save">salvar</string>
    <string name="lbl_cancel_solicitation">Cancelar pedido</string>
    <string name="lbl_cancel_offer">Cancelar carona</string>
    <string name="lbl_refuse_solicitation">Recusar pedido</string>
    <string name="lbl_accept_solicitation">Aceitar pedido</string>
    <string name="lbl_see_ride">Ver Carona</string>
    <string name="lbl_select_source">Selecione a origem:</string>
    <string name="lbl_updating_photo">Fazendo upload da foto...</string>
    <string name="lbl_updating_profile">Atualizando perfil...</string>
    <string name="lbl_edit_place_description">Editar nome do lugar</string>
    <string name="lbl_edit_place">Editar Local</string>
    <string name="lbl_information">Informação</string>
    <string name="lbl_statistic">Estatísticas de Caronas</string>
    <string name="lbl_rides_given"># Oferecidas</string>
    <string name="lbl_rides_taken"># Solicitadas</string>
    <string name="lbl_contact">Contato</string>
    <string name="lbl_empty_text">Nenhum resultado</string>


    <!-- Hints -->
    <string name="hint_login">login</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar senha</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_course">Curso</string>
    <string name="hint_registration">Matrícula</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_email">E-mail</string>

    <!-- Button Text -->
    <string name="btn_send">Enviar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_select_photo">Escolher foto</string>
    <string name="btn_signup">Cadastrar</string>
    <string name="btn_change">Alterar</string>
    <string name="btn_change_date_time">Alterar Data/Hora</string>
    <string name="btn_select">Selecionar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_ok">Ok</string>

    <!-- Errors -->
    <string name="error_fill_field">Preencha este campo.</string>
    <string name="error_empty_field">Este campo é obrigatório.</string>
    <string name="error_password_not_equal">As senhas não são iguais</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_phone">Celular inválido</string>
    <string name="error_invalid_registration">Matrícula deve conter 9 digitos</string>
    <string name="error_password_less_than_six">Senha deve ter no mínimo 6 caracteres</string>
    <string name="error_unauthorized">Matrícula ou senha inválidos.</string>
    <string name="error_ws_generic">Desculpe, ocorreu um erro inesperado.</string>
    <string name="error_not_connect_networking">Sem conexão com a internet.</string>


    <!-- Successs -->
    <string name="success_profile_updated">Seu perfil foi atualizado</string>

    <!-- Texts -->
    <string name="txt_select">Selecione</string>
    <string name="txt_current_location">Localização Atual</string>
    <string name="txt_house">Casa</string>
    <string name="txt_work_place">Trabalho</string>
    <string name="txt_other">Outro</string>
    <string name="txt_uvv_boavista">UVV - Campus Boa Vista</string>
    <string name="txt_uvv_praia_costa">UVV - Campus Praia da Costa</string>
    <string name="txt_uvv_shopping_boulevard">UVV - Shopping Boulevard</string>
    <string name="txt_today">Hoje</string>
    <string name="txt_accepted">Aceito</string>
    <string name="txt_denied">Recusado</string>
    <string name="txt_waiting_response">Aguardando</string>
    <string name="txt_cancelled">Cancelado</string>

    <!-- Messages -->
    <string name="msg_solicitation_success">Solicitação realizada com sucesso!</string>
    <string name="msg_sending_solicitation">Enviando solicitação&#8230;</string>
    <string name="msg_sending_answer">Enviando resposta&#8230;</string>
    <string name="msg_canceling_ride">Cancelando carona&#8230;</string>
    <string name="msg_deleting_place">Deletando locais&#8230;</string>
    <string name="msg_searching_ride">Buscando caronas&#8230;</string>
    <string name="msg_ride_sent">Carona registrada com sucesso.</string>
    <string name="msg_sending_ride">Enviando carona&#8230;</string>
    <string name="msg_saving_place">Salvando local&#8230;</string>
    <string name="msg_getting_places">Buscando locais salvos&#8230;</string>
    <string name="msg_error_get_address">Não foi possível adquirir o endereço da localização indicada.</string>
    <string name="msg_error_couldnt_get_route">Não foi possível adquirir a rota para os pontos indicados.\nPor favor, tente novamente.</string>
    <string name="msg_getting_route">Buscando rota&#8230;</string>
    <string name="msg_allow_location_request">Este aplicativo necessita dos dados da localização do usuário para funcionar. Por favor, habilite o fornecimento de tais dados.</string>
    <string name="msg_turn_on_internet_connection">Este aplicativo necessita de uma conexão de internet para funcionar. Por favor conecte-se a uma rede Wi-Fi ou móvel.</string>


    <!-- Options -->
    <string-array name="locations">
        <item>@string/txt_current_location</item>
        <item>@string/txt_other</item>
    </string-array>
    <string-array name="qnt_passagers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teste">TesteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Integers -->
    <integer name="input_max_length">255</integer>
    <integer name="input_register_min_length">9</integer>
    <integer name="input_phone_max_length">12</integer>
    <integer name="phone_min_length">10</integer>
    <integer name="password_min_length">6</integer>

</resources>
