<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog">

    <LinearLayout
        android:id="@+id/btn_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_dialog_button_wrapper"
        android:layout_below="@+id/content_scroll">

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_cancel"
            android:background="@drawable/background_dialog_button_left"
            style="@style/Button.Dialog"/>

        <Button
            android:id="@+id/confirm_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_confirm"
            android:background="@drawable/background_dialog_button_right"
            style="@style/Button.Dialog"/>

    </LinearLayout>

    <ScrollView
        android:id="@id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/contentWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/rideDepartureAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_departure"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:text="A" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_departure">

                <EditText
                    android:id="@+id/rideDestinationAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_destination"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:text="B"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/rideDateTimeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/input_layout_destination">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/rideDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/lbl_date"
                        android:focusableInTouchMode="false"
                        android:editable="false"
                        android:text="00/00/0000"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/rideHour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/lbl_hour"
                        android:focusableInTouchMode="false"
                        android:editable="false"
                        android:text="00:00"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/numberPassagersLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rideDateTimeWrapper"
                android:textSize="13dp"
                android:text="@string/lbl_num_passagers"/>

            <SeekBar
                android:id="@+id/numberPassagersSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/numberPassagersLbl"
                android:max="3"
                android:layout_margin="5dp"/>

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>