<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog">

    <LinearLayout
        android:id="@+id/btn_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_scroll">

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_cancel"
            android:background="@drawable/background_dialog_button_left"
            style="@style/Button.Dialog"/>

        <Button
            android:id="@+id/confirm_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_confirm"
            android:background="@drawable/background_dialog_button_right"
            style="@style/Button.Dialog"/>

    </LinearLayout>

    <ScrollView
        android:id="@id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/contentWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/place_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_address"
                    android:editable="false"
                    android:focusableInTouchMode="false" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_departure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout_address">

                <EditText
                    android:id="@+id/place_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_description" />

            </android.support.design.widget.TextInputLayout>



        </RelativeLayout>

    </ScrollView>
</RelativeLayout>