<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/stats"
        android:layout_marginLeft="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/lbl_statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_below="@+id/stats"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            app:cardElevation="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_card"
            android:layout_marginLeft="@dimen/margin_card"
            android:layout_marginRight="@dimen/margin_card"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/lbl_rides_given"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/given"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="right"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            app:cardElevation="3dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_card"
            android:layout_marginLeft="@dimen/margin_card"
            android:layout_marginRight="@dimen/margin_card"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/lbl_rides_taken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/taken"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="right"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>

